--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,6 @@
 baseURL: https://ridwanharts.githuh.io/
 languageCode: en-us
-title: "Ridwan Hartadi Setiawan"
+title: "ridwanharts"
 theme: "toha"
 
 # Allow raw html in markdown file
@@ -65,8 +65,8 @@ params:
     # give your some contact information. they will be used in the footer
     contactInfo:
       email: "ridwanharts@gmail.com"
-      phone: "089671718178"
+      phone: "+62 89 671 718 178"
     # a summary of what you do
     summary:
-    - I am an Android Developer
+    - I am an Android Developer and Backend Enthusiast
     - I love to work with some fun projects
