--- a/config.yaml
+++ b/config.yaml
@@ -41,7 +41,7 @@ params:
   gitRepo: https://github.com/ridwanharts
 
   # specify whether you want to write blog post or not
-  enableBlogPost: true
+  enableBlogPost: false
 
   # specify whether you want to show Table of Contents in reading page
   enableTOC: true
