--- a/data/sections/about.yaml
+++ b/data/sections/about.yaml
@@ -13,10 +13,10 @@ company:
   url: "https://www.google.com"
 
 # your resume. this file path should be relative to you "static" directory
-resume: "files/resume.pdf"
+resume: "files/resum.pdf"
 
 # a summary about you
-summary: 'I am a passionate android developer with 2 years of working experience. I built OSS tools for [Kubernetes](https://kubernetes.io/) using GO. My tools help people to deploy their workloads in Kubernetes. Sometimes, I work on some fun projects such as writing a theme, etc.'
+summary: 'I am a passionate android developer with 2 years of working experience.'
 
 # your social links
 # give as many as you want. use font-awesome for the icons.
@@ -35,7 +35,7 @@ socialLinks:
 
 - name: LinkedIn
   icon: "fab fa-linkedin"
-  url: "#"
+  url: "https://www.linkedin.com/in/ridwan-hartadi-setiawan-422745101/?lipi=urn%3Ali%3Apage%3Ad_flagship3_feed%3BXbaMQ2tSTWmz7WwlDGLsQQ%3D%3D"
 
 - name: Twitter
   icon: "fab fa-twitter"
@@ -49,24 +49,25 @@ socialLinks:
 # give the percentage between 50 to 100 with 5 intervals.
 # currently supported colors: blue, yellow, pink, green, sky, orange
 softSkills:
-- name: Leadership
-  percentage: 85
-  color: blue
-- name: Team Work
-  percentage: 90
-  color: yellow
-- name: Communication
-  percentage: 85
-  color: pink
-- name: Hard Working
-  percentage: 85
-  color: green
-- name: Fast Learner
-  percentage: 85
-  color: sky
-- name: Problem Solving
-  percentage: 85
-  color: orange
+# - name: Leadership
+#   percentage: 85
+#   color: blue
+# - name: Team Work
+#   percentage: 90
+#   color: yellow
+# - name: Communication
+#   percentage: 85
+#   color: pink
+# - name: Hard Working
+#   percentage: 85
+#   color: green
+# - name: Fast Learner
+#   percentage: 85
+#   color: sky
+# - name: Problem Solving
+#   percentage: 85
+#   color: orange
+
 # you can also provide color code instead of pre-defined color name
 # - name: Example 1
 #   percentage: 75
