--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseURL: https://ridwanharts.githuh.io/
+baseURL: https://ridwanharts.github.io/
 languageCode: en-us
 title: "ridwanharts"
 theme: "toha"
